--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,90 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.delBut {
+  margin: 5px 5px;
+  background-color: #da562f; /* Green background */
+  border: 1px solid green;
+  color: white;
+  outline: none;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.editBut {
+  margin-left: 10px;
+  background-color: #506477; /* Green background */
+  border: 1px solid green;
+  color: white;
+  outline: none;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.mainMenu {
+  margin: 20px 20px 20px 20px;
+}
+
+.mainMenu button {
+  margin: 5px 5px;
+  background-color: #4caf50; /* Green background */
+  border: 1px solid green; /* Green border */
+  color: white; /* White text */
+  padding: 10px 24px; /* Some padding */
+  outline: none;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+ul {
+  list-style: none;
+}
+
+ul li {
+  display: inline-block;
+}
+
+.navBar li {
+  color: white; /* White text */
+  padding: 0px 0px; /* Some padding */
+  outline: none;
+  margin: 0px 5px;
+}
+
+.divNavBar {
+  margin: 0 auto;
+  width: 400px;
+}
+.navBar li a {
+  text-decoration: none;
+}
+
+.Heading {
+  margin-left: 70px;
+}
+
+.delDiv {
+  margin-left: 70px;
+}
+
+.myhr {
+  text-align: center;
+  width: 720px;
 }
